trying to get code_toggle working

--- a/lectures/L10.ipynb
+++ b/lectures/L10.ipynb
@@ -14,13 +14,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "import numpy\n",
     "from matplotlib import pyplot as plt\n",
-    "\n",
+    "from src import code_toggle\n",
     "%matplotlib inline"
    ]
   },
@@ -130,20 +130,6 @@
     "      y &=& cx + A - k\\\\\n",
     "      y &=& cx + B    &\\text{SIMPLIFY by writing $A-k$ as $B$, no INITIAL CONDITIONS to apply}\\\\  \n",
     "\\end{eqnarray}$$"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "x = numpy.linspace(-3, 3, 30)\n",
-    "dydx = 1*x\n",
-    "y = 1*x\n",
-    "pylab.plot(x, y)\n",
-    "pylab.plot(x, dydx, 'r-')\n",
-    "pylab.show()"
    ]
   },
   {
@@ -285,7 +271,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -297,6 +283,29 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <script>\n",
+       "            function code_toggle_16622708755024593286() {\n",
+       "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
+       "            }\n",
+       "\n",
+       "            \n",
+       "        </script>\n",
+       "\n",
+       "        <a href=\"javascript:code_toggle_16622708755024593286()\">Show Python code</a>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -329,7 +338,9 @@
     "axis.plot(t, At,'g-')\n",
     "axis.annotate('$[A_t]=-2t+5$',xy=(1,4),c='g')\n",
     "\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "code_toggle()"
    ]
   },
   {
@@ -380,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -392,6 +403,29 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "data": {
+      "text/html": [
+       "\n",
+       "        <script>\n",
+       "            function code_toggle_6347543309307789300() {\n",
+       "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
+       "            }\n",
+       "\n",
+       "            \n",
+       "        </script>\n",
+       "\n",
+       "        <a href=\"javascript:code_toggle_6347543309307789300()\">Show Python code</a>\n",
+       "    "
+      ],
+      "text/plain": [
+       "<IPython.core.display.HTML object>"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -421,7 +455,9 @@
     "axis.text(2,-0.5,'$t_{1/2}$')\n",
     "axis.text(-0.8,2,'$s_0/2$')\n",
     "axis.text(-0.5,4,'$s_0$')\n",
-    "plt.show()"
+    "plt.show()\n",
+    "\n",
+    "code_toggle()"
    ]
   },
   {
