--- a/lectures/L10.ipynb
+++ b/lectures/L10.ipynb
@@ -272,7 +272,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -304,7 +308,9 @@
       ]
      },
      "execution_count": 2,
-     "metadata": {"hide_input":true},
+     "metadata": {
+      "hide_input": true
+     },
      "output_type": "execute_result"
     }
    ],
@@ -392,7 +398,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -424,7 +434,7 @@
       ]
      },
      "execution_count": 14,
-     "metadata": {"hide_input":true, "collapsed":true, "trusted": true},
+     "metadata": {},
      "output_type": "execute_result"
     }
    ],
