--- a/lectures/L11.ipynb
+++ b/lectures/L11.ipynb
@@ -173,7 +173,7 @@
     "\\boxed{\\frac{dy}{dx} = 5x^{3/2}y}\n",
     "$$\n",
     "\n",
-    "$$\\begin{eqnarray}\n",
+    "$$\\begin{eqnarray*}\n",
     "\\frac{dy}{dx} &=& 5x^{3/2}y &\\text{first SEPARATE the variables}\\\\\n",
     "\\frac{1}{y}\\frac{dy}{dx} &=& 5x^{3/2} &\\text{now INTEGRATE both sides w.r.t. x}\\\\\n",
     "\\int \\frac{1}{y}\\frac{dy}{dx}.dx &=& \\int 5x^{3/2}dx\\\\\n",
@@ -181,7 +181,7 @@
     "\\ln |y| &=& 2x^{5/2} + C & \\text{we have SIMPLIFIED by writing $C=B-A$}\\\\\n",
     "|y| &=& e^{2x^{5/2}+C} &\\text{we can SIMPLIFY further by exponentiating both sides..}\\\\\n",
     "|y| &=& Be^{2x^{5/2}} &\\text{..and defining $B=e^C$}\\\\\n",
-    "\\end{eqnarray}$$\n",
+    "\\end{eqnarray*}$$\n",
     "\n",
     "The general solution is \n",
     "\n",
