more L2, added outline

--- a/lectures/L2.ipynb
+++ b/lectures/L2.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,24 +23,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/javascript": [
-       "MathJax.Hub.Config({\n",
-       "    TeX: { equationNumbers: { autoNumber: \"AMS\" } }\n",
-       "});\n"
-      ],
-      "text/plain": [
-       "<IPython.core.display.Javascript object>"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "%%javascript\n",
     "MathJax.Hub.Config({\n",
@@ -61,7 +46,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Examples of Good and Bad Graphs\n",
+    "## Key mathematical concepts (continued)\n",
+    "\n",
+    "### Examples of Good and Bad Graphs\n",
     "\n",
     "FIXME: include here?"
    ]
@@ -70,7 +57,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Inequalities\n",
+    "### Inequalities\n",
     "\n",
     "FIXME: include here?"
    ]
@@ -79,7 +66,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What is an equation?\n",
+    "### What is an equation?\n",
     "\n",
     "The $=$ sign in this expression is an **equality** i.e. the left-hand side (LHS) is identical to the right-hand side. \n",
     "\n",
@@ -116,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## What is a limit?\n",
+    "### What is a limit?\n",
     "\n",
     "A limit is the value ($L$) that a function ($f(n)$) approaches as the variable ($n$) in the function is allowed to approach ('get more and more like') a specified value ($c$, often zero or an infinity). It is written like\n",
     "\n",
@@ -151,7 +138,7 @@
     "\n",
     "### Laws of Indices\n",
     "\n",
-    "#### 1. multiplying like powers\n",
+    "#### 1. Multiplying terms with the same base\n",
     "\n",
     "If:\n",
     "\n",
@@ -168,9 +155,14 @@
     "\\begin{equation}\n",
     "\\boxed{a^n \\times a^m = a^{n+m}}\n",
     "\\end{equation}\n",
-    "$$\n",
-    "\n",
-    "#### 2. dividing like powers\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Dividing terms with the same base\n",
     "\n",
     "If:\n",
     "\n",
@@ -189,9 +181,14 @@
     "\\begin{equation}\n",
     "\\boxed{a^n \\div a^m = \\frac{a^n}{a^m} = a^{n-m}}\n",
     "\\end{equation}\n",
-    "$$\n",
-    "\n",
-    "#### 3. raising to a power\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 3. Raising to a power\n",
     "\n",
     "If:\n",
     "\n",
@@ -213,9 +210,14 @@
     "\\end{equation}\n",
     "$$\n",
     "\n",
-    "We can check that the above hold by substituting integers into each of the three expressions. What about the cases where $m$ and $n$ are fractions?\n",
-    "\n",
-    "#### 4. negative indices\n",
+    "We can check that the above hold by substituting integers into each of the three expressions. What about the cases where $m$ and $n$ are fractions?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 4. Negative indices\n",
     "\n",
     "From equation 2, \n",
     "\n",
@@ -226,9 +228,14 @@
     "$$a^3 \\div a^5 = \\frac{a \\times a \\times a}{a \\times a \\times a \\times a \\times a} = \\frac{1}{a^2}$$\n",
     "\n",
     "Therefore:\n",
-    "$$\\begin{equation}\\boxed{a^{-n} = \\frac{1}{a^n}}\\end{equation}$$\n",
-    "\n",
-    "#### 5. zero index\n",
+    "$$\\begin{equation}\\boxed{a^{-n} = \\frac{1}{a^n}}\\end{equation}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 5. Zero index\n",
     "\n",
     "Also from equation 2,\n",
     "\n",
@@ -239,9 +246,14 @@
     "$$\\frac{a^3}{a^3} = 1$$\n",
     "\n",
     "Therefore:\n",
-    "$$\\begin{equation}\\boxed{a^0 = 1}\\end{equation}$$\n",
-    "\n",
-    "#### 6. fraction indices\n",
+    "$$\\begin{equation}\\boxed{a^0 = 1}\\end{equation}$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 6. Fractional indices\n",
     "\n",
     "From equation 1,\n",
     "\n",
@@ -259,13 +271,8 @@
     "\n",
     "$$\\begin{equation}\n",
     "\\boxed{a^{n/m} = \\sqrt[m]{a^n} = \\left ( \\sqrt[m]{a} \\right )^n}\n",
-    "\\end{equation}$$"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\\end{equation}$$\n",
+    "\n",
     "Examples:\n",
     "\n",
     "$$\n",
@@ -380,12 +387,14 @@
    "source": [
     "## Logathrims\n",
     "\n",
+    "### Definition\n",
+    "\n",
     "Taking the logathrim is the reverse mathematical operation to indexation ('raising to the power').\n",
     "\n",
     "A **logathrim** is another word for an **index** or **power**. For example in the expression \n",
     "$$2^3=8$$\n",
     "\n",
-    "The number 3 is the *power* to which the *base* 2 must be raised to yield 8. An exactly equilvalent description is 3 is the *logathrim* which with a *base* of 2 yields 8. This is written\n",
+    "The number 3 is the *power* to which the *base* 2 must be raised to yield 8. An exactly equivalent description is 3 is the *logathrim* which with a *base* of 2 yields 8. This is written\n",
     "\n",
     "$$3 = \\log_2 8$$\n",
     "\n",
@@ -409,7 +418,7 @@
     "\n",
     "$$a^{\\log_ab} = b$$\n",
     "\n",
-    "Hence our description of 'taking the logarithim' as the mathematical inverse of indexation / 'raising to the power'."
+    "Hence our description of 'taking the logarithim' as the mathematical inverse of indexation / 'raising to the power' (and exponentiation, although we are trying not to use that word to avoid confusion when we reach the expoential function)."
    ]
   },
   {
@@ -424,73 +433,118 @@
     "\n",
     "Bels, pH and the Richter scale all use logarithms with base 10, hence an increase of one unit is equivalent a factor of ten. For example, if a sound is measured to be 1 bel (or 10 decibels) louder than another, then its power is ten times the other sound. Or a solution with a pH of 6 has ten times the concentration of hydrogen ions of a solution with pH 7.\n",
     "\n",
-    "Octaves use base 2, hence the higher of two notes separated by a single octave has exactly double the frequency of the lower note.\n"
+    "Octaves use base 2, hence the higher of two notes separated by a single octave has exactly double the frequency of the lower note."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Summary\n",
+    "### Getting a feel for logarithms\n",
     "\n",
-    "### Zeroth order process\n",
-    "The rate of change is INDEPENDENT of concentration (or equivalently $\\propto s^0$ which is a constant). Characterised by a single positive constant, $k$.\n",
+    "Question: What is $x$ if $10^x = 7$? \n",
     "\n",
+    "Answer: $x$ must lie in the range $0 < x < 1$ since $10^0 = 1$ and $10^1=10$.\n",
     "\n",
-    "$$\\begin{eqnarray*}\n",
-    "\\frac{dA}{dt} &=& k &\\quad\\text{GROWTH}\\\\\n",
-    "\\frac{dA}{dt} &=& -k &\\quad\\text{DECAY}\\\\\n",
-    "\\end{eqnarray*}$$\n",
+    "Generally we know that if $10^x = y$ then $\\log_{10}y=x$.\n",
     "\n",
-    "### First order process\n",
-    "\n",
-    "The rate of change is PROPORTIONAL to concentration (i.e. $\\propto s^1$). Characterised by a single positive constant, $k$.\n",
-    "\n",
-    "$$\\begin{eqnarray*}\n",
-    "\\frac{dA}{dt} &=& kA &\\quad\\text{GROWTH}\\\\\n",
-    "\\frac{dA}{dt} &=& -kA &\\quad\\text{DECAY}\\\\\n",
-    "\\end{eqnarray*}$$\n",
-    "\n",
-    "\n",
-    "\n"
+    "Hence in base 10, if\n",
+    "$$\n",
+    "\\begin{eqnarray*}\n",
+    "1 &\\le y <& 10 &\\quad \\text{then} \\quad &0 &\\le x <& 1\\\\\n",
+    "10 &\\le y <& 100 &\\quad \\text{then} \\quad &1 &\\le x <& 2\\\\\n",
+    "0.1 &\\le y <& 1 &\\quad \\text{then} \\quad &-1 &\\le x <& 0\\\\\n",
+    "0.01 &\\le y <& 0.1 &\\quad \\text{then} \\quad &-2 &\\le x <& -1\\\\\n",
+    "\\end{eqnarray*}\n",
+    "$$"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Motivating example from Thermodynamics\n",
-    "\n",
-    "We are told that the change in free energy $\\Delta G$ is related to the equilibrium constant, $K$, via\n",
-    "\n",
-    "$$\\Delta G^o = -RT \\ln K$$\n",
-    "\n",
-    "where $R$ is the Rydberg gas constant and $T$ is the absolute temperature. Can rewrite the above as\n",
-    "\n",
-    "$$\\begin{eqnarray*}\n",
-    "\\ln K &=& - \\frac{\\Delta G^o}{RT}\\\\\n",
-    "  &=& - \\frac{\\Delta H^o}{RT} + \\frac{\\Delta S^o}{R}\\\\\n",
-    "\\end{eqnarray*}$$\n",
-    "\n",
-    "If we assume that $\\Delta H^o$ and $\\Delta S^o$ are independent of $T$, then we can write\n",
-    "\n",
-    "$$\\begin{eqnarray*}\n",
-    "\\frac{d \\ln K}{dT} &=& \\frac{d}{dT} \\left ( - \\frac{\\Delta H^o}{R} T^{-1} \\right )\\\\\n",
-    "\\frac{d \\ln K}{dT} &=& \\frac{\\Delta H^o}{RT^2} &\\quad\\text{this is the VAN T'HOFF ISOCHORE}\\\\\n",
-    "\\end{eqnarray*}$$\n",
-    "\n",
-    "Reintegrating this equation gives\n",
-    "\n",
-    "$$\\begin{eqnarray*}\n",
-    "\\int^{K_2}_{K_1} \\frac{d \\ln K}{dT}. dT &=& \\int^{T_2}_{T_1} \\frac{\\Delta H^o}{RT^2}. dT\\\\\n",
-    "\\int^{K_2}_{K_1} d(\\ln K) &=& \\left [ - \\frac{\\Delta H^o}{RT} \\right ]^{T_2}_{T_1}\\\\\n",
-    "\\ln K_2 - \\ln K_1 &=& - \\frac{\\Delta H^o}{R} \\left ( \\frac{1}{T_2} - \\frac{1}{T_1} \\right )\\\\\n",
-    "\\ln \\left | \\frac{K_2}{K_1} \\right | = - \\frac{\\Delta H^o}{R} \\left ( \\frac{1}{T_2} - \\frac{1}{T_1} \\right )\\\\\n",
-    "\\end{eqnarray*}$$\n",
-    "\n",
-    "\n",
-    "as per your Thermodynamics notes."
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<b>Question 1:</b> What is $x$ if $y=10^x = 40000000000?$<br>\n",
+    "<b>Question 2:</b> What is $x$ if $y=10^x = 0.004$?\n",
+    "</div>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Example\n",
+    "If\n",
+    "\n",
+    "$$\n",
+    "\\left (\\frac{1}{5} \\right)^{-2} = 25\n",
+    "$$\n",
+    "\n",
+    "then $-2$ is the *logarithm* which with a *base* of $1/5$ gives $25$, or equivalently to above\n",
+    "\n",
+    "$$\n",
+    "-2 = \\log_{1/5} 25\n",
+    "$$\n",
+    "\n",
+    "The base of a logarithm may be any number. Commonly logarithms have **base 10**. From a calculator (or from tables in a book) it is found that the logarithm (to the base 10) of 5 is $0.6690$, hence\n",
+    "\n",
+    "$$\n",
+    "10^{0.6690} = 5\n",
+    "$$\n",
+    "\n",
+    "or equivalently,\n",
+    "\n",
+    "$$\n",
+    "\\log_{10} 5 = 0.6990\n",
+    "$$\n",
+    "\n",
+    "Base 10 is so common that this can be written as\n",
+    "\n",
+    "$$\n",
+    "\\log 5 = 0.6990\n",
+    "$$\n",
+    "\n",
+    "But any base other than 10 **must** be stated explicitly e.g.\n",
+    "\n",
+    "$$\n",
+    "\\log_3 9 = 2\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Laws of Logarithms\n",
+    "\n",
+    "#### 1. Taking the logarithm\n",
+    "\n",
+    "Taking the logarithm **undoes** (i.e. is the inverse operation to) raising to a power, i.e.\n",
+    "\n",
+    "$$\n",
+    "\\boxed{\\log_a a^r = r}\n",
+    "$$\n",
+    "\n",
+    "Hence, raising to a power **undoes** taking the logarithm \n",
+    "\n",
+    "$$\n",
+    "\\boxed{a^{\\log_a b} = b}\n",
+    "$$\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### 2. Adding logarithms with the same base"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
