--- a/lectures/L02 - Indices and Logarithms.ipynb
+++ b/lectures/L02 - Indices and Logarithms.ipynb
@@ -71,7 +71,8 @@
     "\\sqrt{y} &= \\sqrt{a^2 + b^2}\\\\\n",
     "\\end{align*}\n",
     "\n",
-    "<div class=\"alert alert-block alert-danger\">\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<img src=\"images/curtis.jpg\" width=50 title=\"Python Logo\" style=\"vertical-align:top\"/>\n",
     "<b>Common misconception:</b> the square root of $(a^2 + b^2) \\ne \\sqrt{a^2} + \\sqrt{b^2}$. We can simplify $\\sqrt{a^2} + \\sqrt{b^2} = a+b$, and hence if this was true, then $y=(a+b)^2$ but when we expand the bracket on the RHS we get $y=a^2+2ab+b^2$ which is NOT what we started with so this is wrong.\n",
     "</div>\n",
     "\n"
@@ -399,8 +400,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>Warning:</b> Below are some common misconceptions!\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<img src=\"images/curtis.jpg\" width=50 title=\"Python Logo\" style=\"vertical-align:top\"/>\n",
+    "<b>Common misconceptions:</b> You CANNOT \"take the power inside the bracket\". This is wrong. See below.\n",
     "</div>\n",
     "\n",
     "\n",
@@ -914,7 +916,7 @@
     "\n",
     "<div class=\"alert alert-block alert-warning\">\n",
     "<img src=\"images/curtis.jpg\" width=50 title=\"Python Logo\" style=\"vertical-align:top\"/>\n",
-    "<b>Warning:</b> You can only simplify terms with logarithms so far! Also you CANNOT \"divide through by logarithms\" as that makes no sense!\n",
+    "<b>Common misconceptions:</b> You CANNOT \"divide through by logarithms\" as that is wrong (and makes no sense since logarithm is a mathematical operation). This means you can only simplify terms with logarithms so far!\n",
     "</div>\n"
    ]
   },
