--- a/lectures/L03 - Introducing Calculus.ipynb
+++ b/lectures/L03 - Introducing Calculus.ipynb
@@ -238,11 +238,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -762,11 +758,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "jupyter": {
-     "source_hidden": true
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -886,11 +878,17 @@
     "\n",
     "$$\\frac{dy}{dx} = 3x^2$$\n",
     "\n",
+    "Hence we can rewrite our main result above using limits\n",
+    "\n",
+    "\\begin{equation}\n",
+    "\\boxed{\\frac{dy}{dx} = \\lim_{h \\rightarrow 0} \\frac{f(x+h) - f(x)}{h}}\n",
+    "\\end{equation}\n",
+    "\n",
     "Unlike $\\frac{\\delta y}{\\delta x}$ where two small but finite numbers have been divided, $\\frac{dy}{dx}$ is the *gradient* of $y$ as a function of $x$. Mathematically therefore it is a whole thing and cannot be separated, although mathematical operations can be applied to it e.g. $2 \\times \\frac{dy}{dx}$ makes sense as this is two times the gradient.\n",
     "\n",
     "<div class=\"alert alert-block alert-warning\">\n",
     "<img src=\"images/curtis.jpg\" width=50 title=\"Python Logo\" style=\"vertical-align:top\"/>\n",
-    "<b>Warning:</b> It might look like it but $\\frac{dy}{dx}$ is NOT a fraction. You CANNOT \"divide through by $d$\" and $dx \\neq d \\times x$. \n",
+    "<b>Common misconception:</b> It might look like it but $\\frac{dy}{dx}$ is NOT a fraction. You CANNOT \"divide through by $d$\" and $dx \\neq d \\times x$. \n",
     "</div>\n",
     "\n",
     "\"Differentiate with respect to $x$\" is the mathematical operation we are applying to $y$, and we could write this as\n",
