--- a/lectures/L02 - Indices and Logarithms.ipynb
+++ b/lectures/L02 - Indices and Logarithms.ipynb
@@ -18,7 +18,7 @@
    "metadata": {},
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
-    "<b>L2 challenge:</b> By moving only one number, rearrange $62 - 1 = 63$ so that it is numerically correct. Swapping numbers counts as moving two numbers! Please send answers to <a href=\"mailto:philip.fowler@ndm.ox.ac.uk\">philip.fowler@ndm.ox.ac.uk</a> before the next lecture.\n",
+    "<b>For you:</b> L2 Challenge: by moving only one number, rearrange $62 - 1 = 63$ so that it is numerically correct. Swapping numbers counts as moving two numbers! Please send answers to <a href=\"mailto:philip.fowler@ndm.ox.ac.uk\">philip.fowler@ndm.ox.ac.uk</a> before the next lecture.\n",
     "</div>"
    ]
   },
@@ -57,12 +57,10 @@
     "\n",
     "To keep this equality, if I do a mathematical operation on one side, I **must** do it to the other side. \n",
     "\n",
-    "<div class=\"alert alert-block alert-info\">\n",
-    "<b>Tip:</b> Clearly layout your mathematics with <ol>\n",
-    "    <li>each equation is on its own line on the page</li>\n",
-    "    <li>the = signs of each equation lie underneath one another.</li>\n",
-    "    <li>the operation you are applying to each side of the equation clearly identified</li>\n",
-    "</ol> </div>\n",
+    "<div class=\"alert alert-block alert-warning\">\n",
+    "<img src=\"images/thinking-face.png\" width=50 title=\"Python Logo\" style=\"vertical-align:top\"/>\n",
+    "<b>Tip:</b> Clearly layout your mathematics with (i) each equation is on its own line on the page, (ii) the = signs of each equation lie underneath one another and (iii) the operation you are applying to each side of the equation clearly identified\n",
+    "</div>\n",
     "\n",
     "\\begin{align*}\n",
     "y &= a^2 + b^2 &\\text{operation: subtract 4 from both sides}\\\\\n",
@@ -71,9 +69,9 @@
     "\\sqrt{y} &= \\sqrt{a^2 + b^2}\\\\\n",
     "\\end{align*}\n",
     "\n",
-    "<div class=\"alert alert-block alert-warning\">\n",
+    "<div class=\"alert alert-block alert-danger\">\n",
     "<img src=\"images/curtis.jpg\" width=50 title=\"Python Logo\" style=\"vertical-align:top\"/>\n",
-    "<b>Common misconception:</b> the square root of $(a^2 + b^2) \\ne \\sqrt{a^2} + \\sqrt{b^2}$. We can simplify $\\sqrt{a^2} + \\sqrt{b^2} = a+b$, and hence if this was true, then $y=(a+b)^2$ but when we expand the bracket on the RHS we get $y=a^2+2ab+b^2$ which is NOT what we started with so this is wrong.\n",
+    "<b>Common misconception:</b> The square root of $(a^2 + b^2) \\ne \\sqrt{a^2} + \\sqrt{b^2}$. We can simplify $\\sqrt{a^2} + \\sqrt{b^2} = a+b$, and hence if this was true, then $y=(a+b)^2$ but when we expand the bracket on the RHS we get $y=a^2+2ab+b^2$ which is NOT what we started with so this is wrong.\n",
     "</div>\n",
     "\n"
    ]
@@ -402,7 +400,7 @@
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
     "<img src=\"images/curtis.jpg\" width=50 title=\"Python Logo\" style=\"vertical-align:top\"/>\n",
-    "<b>Common misconceptions:</b> You CANNOT \"take the power inside the bracket\". This is wrong. See below.\n",
+    "<b>Common misconception:</b> You CANNOT \"take the power inside the bracket\". This is wrong. See below.\n",
     "</div>\n",
     "\n",
     "\n",
@@ -916,7 +914,7 @@
     "\n",
     "<div class=\"alert alert-block alert-warning\">\n",
     "<img src=\"images/curtis.jpg\" width=50 title=\"Python Logo\" style=\"vertical-align:top\"/>\n",
-    "<b>Common misconceptions:</b> You CANNOT \"divide through by logarithms\" as that is wrong (and makes no sense since logarithm is a mathematical operation). This means you can only simplify terms with logarithms so far!\n",
+    "<b>Common misconception:</b> You CANNOT \"divide through by logarithms\" as that is wrong (and makes no sense since logarithm is a mathematical operation). This means you can only simplify terms with logarithms so far!\n",
     "</div>\n"
    ]
   },
