--- a/lectures/L11.ipynb
+++ b/lectures/L11.ipynb
@@ -34,19 +34,18 @@
     "<b>Warning:</b> No calculators!\n",
     "</div>\n",
     "\n",
-    "$$\n",
-    "\\begin{eqnarray*}\n",
-    "&1.\\quad & \\frac{dy}{dx} &=& 0 &\\quad\\text{Find } y &=\\\\\n",
-    "&2.\\quad & \\frac{dy}{dx} &=& 20x &\\quad\\text{Find } y&=\\\\\n",
-    "&3. \\quad & \\frac{dy}{dx} &=& \\frac{1}{x} &\\quad\\text{Find } y&=\\\\\n",
-    "&4. \\quad & \\frac{dy}{dx} &=& \\sin x &\\quad\\text{Find } y&=\\\\\n",
-    "&5. \\quad &&&& \\frac{6.1 \\times 10^{-3}}{7 \\times 10^5} &=\\\\ \n",
-    "&6. \\quad &&&& \\frac{6.63 \\times 10^{-34} \\times 3 \\times 10^8}{500 \\times 10^{-9}} &=\\\\\n",
-    "&7. \\quad &&&& \\sqrt {0.00064} &=\\\\\n",
-    "&8. \\quad &&&& \\int_0^6 {1\\over e^x}\\, dx&=\\\\\n",
-    "&9. \\quad & \\frac{y}{x} &=& e^x, &\\quad\\text{Find } y&=\\\\\n",
-    "&10.\\quad &&&& \\frac{9^0}{10000000} &=\\\\ \n",
-    "\\end{eqnarray*}$$\n",
+    "\\begin{align*}\n",
+    "&1.\\quad & \\frac{dy}{dx} &= 0 &\\text{Find } y &=\\\\\n",
+    "&2.\\quad & \\frac{dy}{dx} &= 20x &\\text{Find } y&=\\\\\n",
+    "&3. \\quad & \\frac{dy}{dx} &= \\frac{1}{x} &\\text{Find } y&=\\\\\n",
+    "&4. \\quad & \\frac{dy}{dx} &= \\sin x &\\text{Find } y&=\\\\\n",
+    "&5. \\quad &&& \\frac{6.1 \\times 10^{-3}}{7 \\times 10^5} &=\\\\ \n",
+    "&6. \\quad &&& \\frac{6.63 \\times 10^{-34} \\times 3 \\times 10^8}{500 \\times 10^{-9}} &=\\\\\n",
+    "&7. \\quad &&& \\sqrt {0.00064} &=\\\\\n",
+    "&8. \\quad &&& \\int_0^6 {1\\over e^x}\\, dx&=\\\\\n",
+    "&9. \\quad & \\frac{y}{x} &= e^x, &\\text{Find } y&=\\\\\n",
+    "&10.\\quad &&& \\frac{9^0}{10000000} &=\\\\ \n",
+    "\\end{align*}\n",
     "11. What is the molar concentration of a solution of 500 ml water to which I have added 2.2 g KCl? (The molar mass of KCl is approx. 66 g/mol)\n"
    ]
   },
@@ -173,7 +172,7 @@
     "\\boxed{\\frac{dy}{dx} = 5x^{3/2}y}\n",
     "$$\n",
     "\n",
-    "$$\\begin{eqnarray*}\n",
+    "\\begin{eqnarray*}\n",
     "\\frac{dy}{dx} &=& 5x^{3/2}y &\\text{first SEPARATE the variables}\\\\\n",
     "\\frac{1}{y}\\frac{dy}{dx} &=& 5x^{3/2} &\\text{now INTEGRATE both sides w.r.t. x}\\\\\n",
     "\\int \\frac{1}{y}\\frac{dy}{dx}.dx &=& \\int 5x^{3/2}dx\\\\\n",
@@ -181,7 +180,7 @@
     "\\ln |y| &=& 2x^{5/2} + C & \\text{we have SIMPLIFIED by writing $C=B-A$}\\\\\n",
     "|y| &=& e^{2x^{5/2}+C} &\\text{we can SIMPLIFY further by exponentiating both sides..}\\\\\n",
     "|y| &=& Be^{2x^{5/2}} &\\text{..and defining $B=e^C$}\\\\\n",
-    "\\end{eqnarray*}$$\n",
+    "\\end{eqnarray*}\n",
     "\n",
     "The general solution is \n",
     "\n",
