--- a/lectures/L04 - Trig, Polar, More differentiation.ipynb
+++ b/lectures/L04 - Trig, Polar, More differentiation.ipynb
@@ -2,8 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy, math\n",
@@ -38,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 2,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -62,21 +66,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_17350461171935328246() {\n",
+       "            function code_toggle_4298174756521301374() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_17350461171935328246()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_4298174756521301374()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 3,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -157,21 +161,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_4301752902616705884() {\n",
+       "            function code_toggle_11544810333279852075() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_4301752902616705884()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_11544810333279852075()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 112,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -244,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 4,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -268,21 +272,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_8656776944185067423() {\n",
+       "            function code_toggle_7291427701255026677() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_8656776944185067423()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_7291427701255026677()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 135,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -322,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 154,
+   "execution_count": 5,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -346,21 +350,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_11433256294258729450() {\n",
+       "            function code_toggle_14437527408816005345() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_11433256294258729450()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_14437527408816005345()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 154,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -457,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 6,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -481,21 +485,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_6746847126851856526() {\n",
+       "            function code_toggle_42792977543557663() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_6746847126851856526()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_42792977543557663()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 155,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -600,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": 7,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -622,21 +626,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_1227595144362150022() {\n",
+       "            function code_toggle_3498339690381748211() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_1227595144362150022()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_3498339690381748211()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 168,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -681,7 +685,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 8,
    "metadata": {
     "jupyter": {
      "source_hidden": true
@@ -703,21 +707,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_8028941312922150372() {\n",
+       "            function code_toggle_11189724861425701613() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_8028941312922150372()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_11189724861425701613()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 191,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -786,8 +790,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
+   "execution_count": 9,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -806,21 +814,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_9810245427315787007() {\n",
+       "            function code_toggle_8928860825906934926() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_9810245427315787007()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_8928860825906934926()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -898,8 +906,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
-   "metadata": {},
+   "execution_count": 10,
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -916,21 +928,21 @@
       "text/html": [
        "\n",
        "        <script>\n",
-       "            function code_toggle_10284767162124602848() {\n",
+       "            function code_toggle_10928406269575166066() {\n",
        "                $('div.cell.code_cell.rendered.selected').find('div.input').toggle();\n",
        "            }\n",
        "\n",
        "            \n",
        "        </script>\n",
        "\n",
-       "        <a href=\"javascript:code_toggle_10284767162124602848()\">Show Python code</a>\n",
+       "        <a href=\"javascript:code_toggle_10928406269575166066()\">Show Python code</a>\n",
        "    "
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 269,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1194,7 +1206,7 @@
     "\n",
     "\n",
     "\\begin{align*}\n",
-    "\\frac{dy}{dx} &= \\lim_{h \\rightarrow 0} \\frac{[f(x) + hf'(x)][g(x) + hg'(x)] - f(x)g(x)}{h}\\\\\n",
+    "\\frac{dy}{dx} &= \\lim_{h \\rightarrow 0} \\frac{[f(x) + hg'(x)][f(x) + hg'(x)] - f(x)g(x)}{h}\\\\\n",
     "&= \\lim_{h \\rightarrow 0} \\frac{[f(x)g(x) +hf'(x)g(x) +hf(x)g'(x) + h^2f'(x)g'(x)] - f(x)g(x)}{h}\\\\\n",
     "&= \\lim_{h \\rightarrow 0} \\frac{[hf'(x)g(x) +hf(x)g'(x) + h^2f'(x)g'(x)]}{h}\\\\\n",
     "&= \\lim_{h \\rightarrow 0} f'(x)g(x) +f(x)g'(x) + hf'(x)g'(x)\\\\\n",
@@ -1299,7 +1311,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "jupyter": {
+     "source_hidden": true
+    }
+   },
    "outputs": [],
    "source": []
   }
