--- a/lectures/L11.ipynb
+++ b/lectures/L11.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lecture 10 - Differential Equations\n",
+    "# Lecture 11 - Differential Equations\n",
     "\n",
     "1. What is a differential equation?\n",
     "2. What is a solution to a differential equation?\n",
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -435,7 +435,7 @@
    "source": [
     "t = numpy.linspace(0, 5, 50)\n",
     "\n",
-    "plt.xkcd()\n",
+    "# plt.xkcd()\n",
     "fig,axis=plt.subplots(figsize=(4,4))\n",
     "axis.spines['right'].set_color('none')\n",
     "axis.spines['top'].set_color('none')\n",
@@ -551,7 +551,7 @@
    "source": [
     "t = numpy.linspace(0, 5, 50)\n",
     "\n",
-    "plt.xkcd()\n",
+    "# plt.xkcd()\n",
     "fig,axis=plt.subplots(figsize=(4,4))\n",
     "axis.spines['right'].set_color('none')\n",
     "axis.spines['top'].set_color('none')\n",
